# Person-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
docs/: architecture.md  layer1_schema.json
engine/: __init__.py  config.py  consistency_checker.py  emotion_classifier.py  emotion_engine_v3.py  pipeline.py  relationship_memory.py  style_fixer.py  tone_injector.py
tests/: test_consistency_checker.py  test_emotion_engine_v3.py  test_pipeline.py  test_style_fixer.py  test_tone_injector.py
